--- a/GDN.html
+++ b/GDN.html
@@ -2,7 +2,8 @@
 <meta charset="utf-8">
 
 <script src="js/d3.js"></script>
-<script src="js/d3plus.js"></script>
+<script src="js/d3plus_VIPUL.js"></script>
+
 <script src="Network.js"></script>
 <div id="viz"></div>
 
@@ -11,14 +12,16 @@ var visualization = d3plus.viz()
     .container("#viz")
     .type("network")
     .data(sample_data)
-    .edges(connections)
-    .edges({"size": 0.3})
+    .edges({"value":connections, "size": 0.3})
     .nodes(position)
     .size(15)
 	.color("fill")
-	.tooltip(["gene_cards","go_term"])
+	.tooltip(["gene_cards","debmap","go_term"])
     .id("index")
-    .dev(true)    // toggle verbose dev mode to monitor site load in browser console
+    .dev(false)
     .resize(true)
  	.draw()	
+
+
 </script>
+
